--- a/app.css
+++ b/app.css
@@ -1,7 +1,7 @@
 /** generated with jscss */
 html, body{
-	width: 100%;
-	height: 100%;
+	/*width: 100%;
+	height: 100%;*/
 	margin: 0px;
 	font: bold 20px arial;
 }
