--- a/app.css
+++ b/app.css
@@ -4,6 +4,7 @@ html, body{
 	height: 100%;*/
 	margin: 0px;
 	font: bold 20px arial;
+/*	transform:  scale(2);*/
 }
 
 h1{
@@ -112,7 +113,7 @@ img{
 .centered{
 	margin-left: auto;
 	margin-right: auto;
-	width: 300px;
+	width: 350px;
 }
 
 label{
@@ -122,5 +123,5 @@ label{
 
 select{
 	font: bold 20px arial;
-	width: 120px;
+	width: 130px;
 }
