--- a/app.css
+++ b/app.css
@@ -1,4 +1,12 @@
-@media screen and ( max-width: 400px ) and ( max-width: 400px ) {
+@media screen and ( max-width: 400px ) , screen and ( max-height: 400px ) {
+html, body{
+	font-size: 10px;
+}
+
+h1{
+	font-size: 16px;
+}
+
 td{
 	width: 14px;
 	height: 14px;
@@ -23,17 +31,48 @@ img{
 
 #message{
 	width: 136px;
+	height: 10px;
+	font-size: 8px;
+}
+
+#gameover{
+	top: 40px;
+	left: 30px;
+}
+
+.btn{
+	margin: 2.5px;
+	font-size: 10px;
+}
+
+label{
+	font-size: 12px;
+}
+
+select{
+	font-size: 10px;
+	width: 40px;
+}
+
+.centered{
+	width: 140px;
+}
+
+.test10{
+	background-color: #ffff00;
 }
 
 
 }
 
-@media screen and ( max-width: 800px ) and ( max-width: 800px ) {
+@media screen and ( min-width: 401px ) and ( max-width: 800px ) , screen and ( min-height: 401px ) and ( max-height: 800px ) {
 html, body{
 	width: 100%;
 	height: 100%;
 	margin: 0px;
-	font: bold 20px arial;
+	font-weigth: bold;
+	font-family: arial;
+	font-size: 17.5px;
 }
 
 h1{
@@ -41,7 +80,7 @@ h1{
 	color: #ffffff;
 	margin: 0px;
 	z-index: 2;
-	font-size: 34px;
+	font-size: 32.5px;
 	padding-right: 4px;
 }
 
@@ -51,8 +90,6 @@ table{
 	border-style: solid;
 	border-color: black;
 	border-collapse: collapse;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 td{
@@ -89,21 +126,17 @@ img{
 	border: 1px solid black;
 	text-align: center;
 	width: 256px;
-	height: 75px;
+	height: 25px;
 	color: #5f9ea0;
-	font: bold 20px arial;
+	font-size: 20px;
 	overflow: auto;
 	margin-top: 5px;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 #gameover{
-	position: absolute;
-	top: 125px;
-	left: 0px;
-	right: 0px;
-	margin: 0 auto;
+	position: fixed;
+	top: 100px;
+	left: 75px;
 	padding: 10px;
 	max-width: 130px;
 	background-color: rgba(127,255,127,0.75);
@@ -126,8 +159,8 @@ img{
 	background-color: #5f5;
 	border: 2px solid #050;
 	border-radius: 7px;
-	margin: 5px;
-	font: bold 25px arial;
+	margin: 6.25px;
+	font-size: 25px;
 	text-transform: uppercase;
 	display: auto;
 }
@@ -141,26 +174,37 @@ img{
 	background-color: #ffffff;
 }
 
-.centered{
-	margin-left: auto;
-	margin-right: auto;
-	width: 300px;
-}
-
 label{
 	width: 170px;
 	display: inline-block;
+	font-size: 19.5px;
 }
 
 select{
-	font: bold 20px arial;
-	width: 120px;
+	font-size: 17.5px;
+	width: 100px;
+}
+
+.centered{
+	width: 350px;
+}
+
+.test25{
+	background-color: #ffff00;
 }
 
 
 }
 
-@media screen and ( min-width: 800px ) and ( min-width: 800px ) {
+@media screen and ( min-width: 801px ) , screen and ( min-height: 801px ) {
+html, body{
+	font-size: 30px;
+}
+
+h1{
+	font-size: 60.00000000000001px;
+}
+
 td{
 	width: 54px;
 	height: 54px;
@@ -185,12 +229,49 @@ img{
 
 #message{
 	width: 456px;
+	height: 50px;
+	font-size: 40px;
+}
+
+#gameover{
+	top: 200px;
+	left: 150px;
+}
+
+.btn{
+	margin: 12.5px;
+	font-size: 50px;
+}
+
+label{
+	font-size: 32px;
+}
+
+select{
+	font-size: 30px;
+	width: 200px;
+}
+
+.centered{
+	width: 700px;
+}
+
+.test50{
+	background-color: #ffff00;
 }
 
 
 }
 
-@media screen and ( min-width: 1600px ) and ( min-width: 1600x ) {
+@media screen and ( min-width: 1601px ) , screen and ( min-height: 1601x ) {
+html, body{
+	font-size: 55px;
+}
+
+h1{
+	font-size: 115.00000000000001px;
+}
+
 td{
 	width: 104px;
 	height: 104px;
@@ -215,6 +296,35 @@ img{
 
 #message{
 	width: 856px;
+	height: 100px;
+	font-size: 80px;
+}
+
+#gameover{
+	top: 400px;
+	left: 300px;
+}
+
+.btn{
+	margin: 25px;
+	font-size: 100px;
+}
+
+label{
+	font-size: 57px;
+}
+
+select{
+	font-size: 55px;
+	width: 400px;
+}
+
+.centered{
+	width: 1400px;
+}
+
+.test100{
+	background-color: #ffff00;
 }
 
 
@@ -231,12 +341,24 @@ h1{
 .btnbar{
 	left: auto;
 	top: 0px;
-	padding-top: 50px;
+	padding-top: 100px;
 	transition: none;
 }
 
 .btn{
 	display: block;
+	width: 94%;
+}
+
+.centerGame{
+	margin-left: 10px;
+	margin-right: auto;
+}
+
+.centered{
+	margin-left: auto;
+	margin-right: auto;
+	padding-right: 10px;
 }
 
 
@@ -259,6 +381,18 @@ h1{
 
 .btn{
 	display: auto;
+	width: auto;
+}
+
+.centerGame{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.centered{
+	margin-left: auto;
+	margin-right: auto;
+	padding-right: inherited;
 }
 
 
@@ -268,7 +402,8 @@ html, body{
 	width: 100%;
 	height: 100%;
 	margin: 0px;
-	font: bold 20px arial;
+	font-weigth: bold;
+	font-family: arial;
 }
 
 h1{
@@ -276,7 +411,6 @@ h1{
 	color: #ffffff;
 	margin: 0px;
 	z-index: 2;
-	font-size: 34px;
 	padding-right: 4px;
 }
 
@@ -286,8 +420,6 @@ table{
 	border-style: solid;
 	border-color: black;
 	border-collapse: collapse;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 td{
@@ -310,21 +442,13 @@ td{
 #message{
 	border: 1px solid black;
 	text-align: center;
-	height: 75px;
 	color: #5f9ea0;
-	font: bold 20px arial;
 	overflow: auto;
 	margin-top: 5px;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 #gameover{
-	position: absolute;
-	top: 125px;
-	left: 0px;
-	right: 0px;
-	margin: 0 auto;
+	position: fixed;
 	padding: 10px;
 	max-width: 130px;
 	background-color: rgba(127,255,127,0.75);
@@ -347,8 +471,6 @@ td{
 	background-color: #5f5;
 	border: 2px solid #050;
 	border-radius: 7px;
-	margin: 5px;
-	font: bold 25px arial;
 	text-transform: uppercase;
 	display: auto;
 }
@@ -362,19 +484,8 @@ td{
 	background-color: #ffffff;
 }
 
-.centered{
-	margin-left: auto;
-	margin-right: auto;
-	width: 300px;
-}
-
 label{
 	width: 170px;
 	display: inline-block;
-}
-
-select{
-	font: bold 20px arial;
-	width: 120px;
 }
 
